Fix logo image filename case sensitivity

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/logo.png" alt="Stone Grill Logo">
+    <img src="/reflections/logo.PNG" alt="Stone Grill Logo">
     <h1>Ninox Reflections</h1>
   </header>
   <div class="hero">All topics in one place. Tap <strong>Read</strong> to open a clean reading mode, or <strong>Download PDF</strong> for print.</div>
