--- a/reflections/index.html
+++ b/reflections/index.html
@@ -82,7 +82,7 @@
 
       <!-- Moments of Solitude -->
       <article class="card" data-title="Moments of Solitude">
-        <img loading="lazy" class="thumb" src="/reflections/pages/moments-of-solitude/cover.jpg" alt="Moments of Solitude cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img loading="lazy" class="thumb" src="/reflections/pages/moments-of-solitude/moments-of-solitude.png" alt="Moments of Solitude cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <div>
           <h3>Moments of Solitude — How Silence Teaches</h3>
           <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
