--- a/reflections/index.html
+++ b/reflections/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ninox Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="icon" href="/reflections/IMG_0688.png">
   <style>
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
