--- a/reflections/index.html
+++ b/reflections/index.html
@@ -81,18 +81,31 @@
       </article>
 
       <!-- Moments of Solitude -->
-      <article class="card" data-title="Moments of Solitude">
-        <img loading="lazy" class="thumb" src="/reflections/pages/moments-of-solitude/moments-of-solitude.png" alt="Moments of Solitude cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
-        <div>
-          <h3>Moments of Solitude — How Silence Teaches</h3>
-          <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
-          <div class="meta">First Edition 2025 • Short Book</div>
-          <div class="actions">
-            <a class="btn" data-read="/reflections/pages/moments-of-solitude/read.html" data-title="Moments of Solitude — Reading Mode" href="/reflections/pages/moments-of-solitude/read.html" target="_blank">Read</a>
-            <a class="btn secondary" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">Download PDF</a>
-          </div>
-        </div>
-      </article>
+      <article class="card">
+  <div>
+    <img class="book-cover"
+         src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
+         alt="Moments of Solitude cover"
+         onerror="this.src='/reflections/assets/placeholder.jpg'">
+
+    <div class="cover-actions">
+      <a class="btn"
+         data-read="/reflections/pages/moments-of-solitude/read.html"
+         data-title="Moments of Solitude — Reading Mode"
+         href="/reflections/pages/moments-of-solitude/read.html"
+         target="_blank">Read</a>
+
+      <a class="btn secondary"
+         href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">Download</a>
+    </div>
+  </div>
+
+  <div>
+    <h3>Moments of Solitude — How Silence Teaches</h3>
+    <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
+    <div class="meta">First Edition 2025 • Short Book</div>
+  </div>
+</article>
 
       <!-- The Triune Reflection -->
       <article class="card" data-title="The Triune Reflection">
