--- a/reflections/index.html
+++ b/reflections/index.html
@@ -7,6 +7,16 @@
   <meta name="description" content="All reflections in one page — read or download.">
   <link rel="icon" href="/reflections/IMG_0688.png">
   <style>
+    .book-cover {
+  width: 140px;
+  height: 210px;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.35);
+  background: #fff6e6;
+  display: block;
+  margin: 0 auto 10px;
+}
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
       --accent:#d93404; --accent2:#f7b733; --rule:#fc4a1a;
