--- a/reflections/index.html
+++ b/reflections/index.html
@@ -7,15 +7,29 @@
   <meta name="description" content="All reflections in one page — read or download.">
   <link rel="icon" href="/reflections/IMG_0688.png">
   <style>
-    .book-cover {
-  width: 140px;
-  height: 210px;
-  object-fit: cover;
-  border-radius: 6px;
-  box-shadow: 0 6px 14px rgba(0,0,0,0.35);
-  background: #fff6e6;
-  display: block;
-  margin: 0 auto 10px;
+    /* Buttons under the cover */
+.cover-actions {
+  display: flex;
+  flex-direction: column;     /* stack them vertically */
+  align-items: center;
+  gap: 6px;                   /* small space between buttons */
+}
+
+/* Smaller, balanced button style */
+.cover-actions .btn {
+  background: var(--accent);
+  color: #fff;
+  text-decoration: none;
+  padding: 6px 10px;          /* smaller padding */
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  width: 90px;                /* narrower width */
+  text-align: center;
+}
+
+.cover-actions .btn.secondary {
+  background: #a94a1e;
 }
     :root{
       --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
@@ -92,9 +106,9 @@
 
       <!-- Moments of Solitude -->
       <article class="card">
-  <div>
+  <div class="left">
     <img class="book-cover"
-         src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
+         src="/reflections/pages/moments-of-solitude/cover.jpg"
          alt="Moments of Solitude cover"
          onerror="this.src='/reflections/assets/placeholder.jpg'">
 
@@ -110,7 +124,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="right">
     <h3>Moments of Solitude — How Silence Teaches</h3>
     <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
     <div class="meta">First Edition 2025 • Short Book</div>
