--- a/reflections/index.html
+++ b/reflections/index.html
@@ -108,7 +108,7 @@
       <article class="card">
   <div class="left">
     <img class="book-cover"
-         src="/reflections/pages/moments-of-solitude/cover.jpg"
+         src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
          alt="Moments of Solitude cover"
          onerror="this.src='/reflections/assets/placeholder.jpg'">
 
