Refactor Multilingual Mind and Triune Reflection sections

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -144,19 +144,32 @@
     <section class="grid">
 
       <!-- Multilingual Mind -->
-      <article class="card" data-title="Multilingual Mind">
-        <img loading="lazy" class="thumb" src="/reflections/pages/multilingual-mind/cover.jpg" alt="Multilingual Mind cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
-        <div>
-          <h3>Multilingual Mind — How Language Shapes Thought</h3>
-          <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
-          <div class="meta">First Edition 2025 • Essay</div>
-          <div class="actions">
-            <a class="btn" data-read="/reflections/pages/multilingual-mind/read.html" data-title="Multilingual Mind — Reading Mode" href="/reflections/pages/multilingual-mind/read.html" target="_blank">Read</a>
-            <a class="btn secondary" href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">Download PDF</a>
-          </div>
-        </div>
-      </article>
+      <article class="card">
+  <div class="left">
+    <img class="book-cover"
+         src="/reflections/pages/multilingual-mind/IMG_0751.JPEG"
+         alt="Multiligual Mind cover"
+         onerror="this.src='/reflections/assets/placeholder.jpg'">
 
+    <div class="cover-actions">
+      <a class="btn"
+         data-read="/reflections/pages//multilingual-mind/read.html"
+         data-title="Multiligual Mind — Reading Mode"
+         href="/reflections/pages/multilingual-mind/read.html"
+         target="_blank">Read</a>
+
+      <a class="btn secondary"
+         href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">Download</a>
+    </div>
+  </div>
+
+  <div class="right">
+    <h3>Multilingual Mind — How Language Shapes Thought</h3>
+    <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
+    <div class="meta">First Edition 2025 • Short Book</div>
+  </div>
+</article>
+ 
       <!-- Moments of Solitude -->
      <article class="card">
   <div class="left">
@@ -185,19 +198,32 @@
 </article>
 
       <!-- The Triune Reflection -->
-      <article class="card" data-title="The Triune Reflection">
-        <img loading="lazy" class="thumb" src="/reflections/pages/the-triune-reflection/cover.jpg" alt="The Triune Reflection cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
-        <div>
-          <h3>The Triune Reflection</h3>
-          <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
-          <div class="meta">Reflection • Essay</div>
-          <div class="actions">
-            <a class="btn" data-read="/reflections/pages/the-triune-reflection/read.html" data-title="The Triune Reflection — Reading Mode" href="/reflections/pages/the-triune-reflection/read.html" target="_blank">Read</a>
-            <a class="btn secondary" href="/reflections/pages/the-triune-reflection/the-triune-reflection.pdf">Download PDF</a>
-          </div>
-        </div>
-      </article>
+       <article class="card">
+  <div class="left">
+    <img class="book-cover"
+         src="/reflections/pages/triune-reflection/IMG_2244.jpeg"
+         alt="The Triune Reflection cover"
+         onerror="this.src='/reflections/assets/placeholder.jpg'">
 
+    <div class="cover-actions">
+      <a class="btn"
+         data-read="/reflections/pages/triune-reflection/read.html"
+         data-title="The Triune Reflection — Reading Mode"
+         href="/reflections/pages/triune-reflection/read.html"
+         target="_blank">Read</a>
+
+      <a class="btn secondary"
+         href="/reflections/pages/triune-reflection/triune-reflection.pdf">Download</a>
+    </div>
+  </div>
+
+  <div class="right">
+    <h3>The Triune Reflection</h3>
+    <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
+    <div class="meta">First Edition 2025 • Reflection • Essay</div>
+  </div>
+</article>
+      
       <!-- Between Nothing and Space -->
       <article class="card" data-title="Between Nothing and Space">
         <img loading="lazy" class="thumb" src="/reflections/pages/between-nothing-and-space/cover.jpg" alt="Between Nothing and Space cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
