--- a/reflections/index.html
+++ b/reflections/index.html
@@ -201,7 +201,7 @@
        <article class="card">
   <div class="left">
     <img class="book-cover"
-         src="/reflections/pages/triune-reflection/IMG_2244.jpeg"
+         src="/reflections/pages/triune-reflection/triune-reflection.png"
          alt="The Triune Reflection cover"
          onerror="this.src='/reflections/assets/placeholder.jpg'">
 
