--- a/reflections/index.html
+++ b/reflections/index.html
@@ -147,7 +147,7 @@
       <article class="card">
   <div class="left">
     <img class="book-cover"
-         src="/reflections/pages/multilingual-mind/IMG_0751.JPEG"
+         src="/reflections/pages/multilingual-mind/multilingual-mind.PNG"
          alt="Multiligual Mind cover"
          onerror="this.src='/reflections/assets/placeholder.jpg'">
 
