Update image sources for essays in index.html

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -226,7 +226,7 @@
       
       <!-- Between Nothing and Space -->
       <article class="card" data-title="Between Nothing and Space">
-        <img loading="lazy" class="thumb" src="/reflections/pages/between-nothing-and-space/cover.jpg" alt="Between Nothing and Space cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img loading="lazy" class="thumb" src="/reflections/pages/between-nothing-and-space/nothing-space.png" alt="Between Nothing and Space cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <div>
           <h3>Between Nothing and Space</h3>
           <p>An essay on emptiness, meaning, and the interval where action begins.</p>
@@ -240,14 +240,14 @@
 
       <!-- The Mirror of Worship -->
       <article class="card" data-title="The Mirror of Worship">
-        <img loading="lazy" class="thumb" src="/reflections/pages/mirror-of-worship/cover.jpg" alt="The Mirror of Worship cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
+        <img loading="lazy" class="thumb" src="/reflections/pages/mirror-of-worship/mirror-worship.png" alt="The Mirror of Worship cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
         <div>
           <h3>The Mirror of Worship</h3>
           <p>On devotion as reflection — how what we honor, we become.</p>
           <div class="meta">Reflection • Essay</div>
           <div class="actions">
             <a class="btn" data-read="/reflections/pages/mirror-of-worship/read.html" data-title="The Mirror of Worship — Reading Mode" href="/reflections/pages/mirror-of-worship/read.html" target="_blank">Read</a>
-            <a class="btn secondary" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf">Download PDF</a>
+            <a class="btn secondary" href="/reflections/pages/mirror-of-worship/mirror-worship.pdf">Download PDF</a>
           </div>
         </div>
       </article>
