--- a/reflections/index.html
+++ b/reflections/index.html
@@ -164,7 +164,8 @@
   </div>
 
   <div class="right">
-    <h3>Multilingual Mind — How Language Shapes Thought</h3>
+    <h3>Multilingual Mind </h3>
+    <h4>How Language Shapes our Thought Process</h4>
     <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
     <div class="meta">First Edition 2025 • Short Book</div>
   </div>
