Refine text in reflections/index.html
Updated text for clarity and consistency in the multilingual mind section and corrected capitalization in the mirror of worship section.

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -165,8 +165,8 @@
 
   <div class="right">
     <h3>Multilingual Mind </h3>
-    <p>How Language Shapes our Thought Process</p>
-    <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
+    <p>How Language Shapes our Thought Process,</p>
+    <p>frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
     <div class="meta">First Edition 2025 • Short Book</div>
   </div>
 </article>
@@ -192,7 +192,7 @@
   </div>
 
   <div class="right">
-    <h3>Moments of Solitude — How Silence Teaches</h3>
+    <h3>Moments of Solitude</h3>
     <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
     <div class="meta">First Edition 2025 • Short Book</div>
   </div>
@@ -275,7 +275,7 @@
 
   <div class="right">
     <h3>The Mirror of Worship</h3>
-    <p>On devotion as reflection — how what we honor, we become.</p>
+    <p>how what we honor, we become.</p>
     <div class="meta">First Edition 2025 • Reflection • Essay</div>
   </div>
 </article>
