--- a/reflections/pages/triune-reflection/read.html
+++ b/reflections/pages/triune-reflection/read.html
@@ -1,108 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>The Triune Reflection — Read</title>
-  <meta name="description" content="A quiet invitation to stillness and presence.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
-  <style>
-    :root{
-      --bg:#0e0e0f; --paper:#141415; --ink:#f1f1f1; --muted:#aaa; --accent:#ffb020; --rule:#252526;
-      --maxw: 860px; --fs: 18px; --lh: 1.8; --radius:16px;
-    }
-    @media (prefers-color-scheme: light){
-      :root{ --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d; --accent:#d93404; --rule:#e4c7b7; }
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;height:100%}
-    body{font-family: Georgia, ui-serif, serif; background:var(--bg); color:var(--ink); font-size:var(--fs); line-height:var(--lh)}
-    header{
-      position: sticky; top:0; z-index:10; background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.15));
-      backdrop-filter: blur(6px); border-bottom:1px solid var(--rule);
-    }
-    .wrap{max-width:var(--maxw); margin:0 auto; padding:12px 16px; display:flex; align-items:center; justify-content:space-between; gap:10px}
-    .back{color:var(--accent); text-decoration:none; font-weight:700}
-    .dl{border:1px solid var(--rule); border-radius:10px; padding:6px 10px; color:var(--ink); text-decoration:none}
-    main{padding: 18px 16px 60px}
-    article{
-      max-width:var(--maxw); margin:0 auto; background:var(--paper); border:1px solid var(--rule);
-      border-radius:var(--radius); padding:26px 22px; box-shadow:0 10px 30px rgba(0,0,0,.25)
-    }
-    h1{margin:0 0 6px; font-size:clamp(24px,5vw,38px)}
-    .meta{color:var(--muted); margin-bottom:16px}
-    h2{margin:20px 0 8px}
-    p{margin:10px 0}
-    blockquote{margin:14px 0; padding:12px 16px; border-left:4px solid var(--accent); background:rgba(255,176,32,.08); border-radius:10px}
-    .divider{ text-align:center; color:var(--muted); margin: 18px 0}
-    .divider span{padding:0 10px}
-    .small{font-size:14px; color:var(--muted)}
-    footer{max-width:var(--maxw); margin:0 auto; padding:18px 16px; color:var(--muted)}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>The Triune Reflection — Ninox Antolihao</title>
+<link rel="icon" href="/reflections/assets/favicon.ico">
+<style>
+body{
+  font-family: 'Georgia', serif;
+  background:#fffdf9;
+  color:#3b2b26;
+  margin:0;
+  line-height:1.7;
+  padding:40px 10%;
+}
+header{text-align:center;margin-bottom:40px;}
+header h1{font-size:2.2rem;margin-bottom:8px;}
+header h2{font-size:1.2rem;font-weight:normal;color:#7b5f54;margin:4px 0;}
+header p{margin:2px 0;color:#9c7e74;}
+h3{margin-top:40px;border-top:1px solid #e6d2b5;padding-top:20px;color:#5a392e;}
+h4{color:#7b4c3d;margin-top:24px;margin-bottom:8px;}
+p{text-align:justify;margin:12px 0;}
+ul{margin-left:20px;}
+blockquote{
+  font-style:italic;
+  color:#5f4b43;
+  border-left:4px solid #d8b88f;
+  padding-left:12px;
+  margin:16px 0;
+}
+.center{text-align:center;margin:24px 0;}
+footer{
+  text-align:center;
+  margin-top:60px;
+  font-size:0.9rem;
+  color:#a38b7b;
+  border-top:1px solid #e0d4c6;
+  padding-top:20px;
+}
+</style>
 </head>
 <body>
-  <header>
-    <div class="wrap">
-      <a class="back" href="/reflections/pages/index.html">← Back to Reflections</a>
-      <a class="dl" href="./moments-of-solitude.pdf" download>Download PDF</a>
-    </div>
-  </header>
 
-  <main>
-    <article>
-      <h1>Moments of Solitude — How Silence Teaches</h1>
-      <p class="meta">By Ninox Antolihao • First Edition 2025</p>
+<header>
+  <h1>The Triune Reflection</h1>
+  <h2>The Eternal Frequency of the Soul</h2>
+  <p>by Ninox Antolihao</p>
+  <p>Stone Grill Press · Leyte, Philippines · First Edition — 2025</p>
+</header>
 
-      <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
+<section>
+  <h3>Dedication</h3>
+  <p><em>To every seeker who has questioned the light, yet still walked toward it.</em></p>
 
-      <div class="divider"><span>— ❖ —</span></div>
+  <h3>Epigraph</h3>
+  <blockquote>“Between light and silence, the soul finds its voice.” — Ninox Antolihao</blockquote>
 
-      <h2>I. The Door That Doesn’t Knock</h2>
-      <p>Solitude rarely announces itself. It doesn’t send an invitation or clear your calendar. It arrives in the spaces between errands, in the pause after a hard sentence, in the quiet that follows celebration. If you walk past it, nothing seems lost. If you step inside, the room keeps expanding.</p>
-      <p>In solitude, the world returns your name without a title. No roles to perform, no expectations to juggle. Just the original you—still, ordinary, awake. You begin to notice that attention is a kind of love. Where it rests, life grows.</p>
+  <h3>Table of Contents</h3>
+  <ol>
+    <li>Introduction – The Unified Self</li>
+    <li>The Father · The Master Mind</li>
+    <li>The Son · The Expression of Light</li>
+    <li>The Unified Self</li>
+    <li>The Holy Spirit · Guide Through Emotion and the Subconscious</li>
+    <li>Reflection – The Oneness of Light, Manifestation and Frequency</li>
+    <li>Closing Reflection</li>
+    <li>About the Author</li>
+  </ol>
 
-      <h2>II. The Weight of Noise</h2>
-      <p>Noise is not only sound. It is the constant tug to be elsewhere: the comparison, the urgency, the glitter that ages badly. Noise makes the present feel insufficient, and that is how we become strangers to our own breath.</p>
-      <p>Silence is not the absence of sound; it is the reordering of value. In silence, ordinary things regain their dignity—the kettle, the chair, the hand on the table. You see how many meanings were borrowed, and how many you can return.</p>
+  <h3>Introduction – The Unified Self</h3>
+  <p>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern...</p>
 
-      <blockquote>“When we stop rushing, time remembers its true size.”</blockquote>
+  <!-- (keep all your reflection text paragraphs here exactly as written, each section under its <h3> or <h4> headings.
+       You can copy the full text from your message and insert it between <p> ... </p> blocks.
+       The centered interlude part can use the class="center" for its lines.) -->
 
-      <h2>III. Learning the Pace of Enough</h2>
-      <p>We chase completion as if life were a checklist. Yet every arrival simply teaches a better kind of beginning. Solitude does not make you smaller; it gives the soul room to stretch. It replaces ambition’s fever with craft’s devotion.</p>
-      <p>There is a pace that belongs to you. Not the slow of fear nor the speed of panic—the honest cadence where attention and action keep each other company. When you walk at that pace, decisions become simpler: does this deepen my life or only decorate it?</p>
+  <div class="center">
+    <p><em>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern.</em></p>
+    <p><em>Between thought and feeling stands the body—the vessel of light in motion...</em></p>
+  </div>
 
-      <h2>IV. The Work of Gentle Courage</h2>
-      <p>Solitude asks for courage, but not the kind that shouts. The brave thing is to tell the truth: this hurts; this matters; this no longer fits. In quiet, the truth stops threatening you. It becomes a tool you can hold without bleeding.</p>
-      <p>Then the smallest acts become decisive—closing a tab and opening a window, putting the phone down and picking the book up, saying no with a blessing. You honor what you love by the attention you are willing to give it.</p>
+  <h3>About the Author</h3>
+  <p><strong>Ninox Antolihao</strong> is a Filipino writer and thinker known for blending philosophy, spirituality, and science into reflections that awaken inner understanding...</p>
+</section>
 
-      <h2>V. Returning With Light</h2>
-      <p>Do not stay hidden forever. Solitude is not an island to own; it is a shore to visit until your feet remember how to stand. You go there to hold your life to the light and then you bring that light back—to your people, your projects, your street.</p>
-      <p>When you return, you carry a quieter strength. Not certainty, but steadiness. Not answers, but good questions. And the day, which was crowded a moment ago, becomes spacious enough for gratitude.</p>
+<footer>
+  <p>First Edition 2025 • Ninox Antolihao</p>
+</footer>
 
-      <div class="divider"><span>— ❖ —</span></div>
-
-      <h2>How to Practice (Three Simple Routines)</h2>
-      <ul>
-        <li><strong>Five breaths, three times a day.</strong> Stop. Feel the air arrive and leave. Begin again.</li>
-        <li><strong>One undistracted hour a week.</strong> No screens. Walk, read, write, or simply sit.</li>
-        <li><strong>Name what is enough.</strong> Write one sentence that defines “enough” for today. Let it guide your choices.</li>
-      </ul>
-
-      <p class="small">If you forget, start small. Solitude will meet you wherever you’re honest.</p>
-
-      <div class="divider"><span>— ❖ —</span></div>
-
-      <h2>About the Author</h2>
-      <p>Ninox Antolihao writes and builds from the Philippines. He explores how attention, language, and devotion shape the way we live—one quiet choice at a time.</p>
-
-      <p class="small">© First Edition 2025 · Stone Grill • All rights reserved</p>
-    </article>
-  </main>
-
-  <footer>
-    <div class="wrap" style="display:block; text-align:center;">
-      <a class="back" href="/reflections/pages/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
-    </div>
-  </footer>
 </body>
 </html>
