Update table of contents with part labels

--- a/reflections/pages/triune-reflection/read.html
+++ b/reflections/pages/triune-reflection/read.html
@@ -59,10 +59,10 @@ footer{
   <h3>Table of Contents</h3>
   <ol>
     <li>Introduction – The Unified Self</li>
-    <li>The Father · The Master Mind</li>
-    <li>The Son · The Expression of Light</li>
-    <li>The Unified Self</li>
-    <li>The Holy Spirit · Guide Through Emotion and the Subconscious</li>
+    <li>Part I – The Father · The Master Mind</li>
+    <li>Part II – The Son · The Expression of Light</li>
+    <li>Interlude – The Unified Self</li>
+    <li>Part III – The Holy Spirit · Guide Through Emotion and the Subconscious</li>
     <li>Reflection – The Oneness of Light, Manifestation and Frequency</li>
     <li>Closing Reflection</li>
     <li>About the Author</li>
